function(add_basic_test TEST_NAME)
  add_ut_test(${TEST_NAME})
  target_link_libraries(${TEST_NAME} PRIVATE gr-basic gr-testing)
endfunction()

add_basic_test(qa_Converter)
add_basic_test(qa_Selector)
add_basic_test(qa_sources)
add_basic_test(qa_DataSink)
add_basic_test(qa_TriggerBlocks)

if(GR_ENABLE_BLOCK_REGISTRY AND INTERNAL_ENABLE_BLOCK_PLUGINS)
  add_basic_test(qa_BasicAvailableBlocks)
  target_link_libraries(qa_BasicAvailableBlocks PRIVATE gnuradio4::GrBasicBlocksShared)
endif()
add_basic_test(qa_StreamToDataSet)
add_basic_test(qa_SyncBlock)

message(STATUS "###Python Include Dirs: ${Python3_INCLUDE_DIRS}")
if(PYTHON_AVAILABLE AND GR_ENABLE_BLOCK_REGISTRY)
  add_basic_test(qa_PythonBlock)
endif()
